# python-service

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: index.py
